# scribario

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
admin/: package-lock.json  package.json
bot/: CLAUDE.md  config.py  db.py  main.py
brand/: BRAND-GUIDE.md  LEGAL-REQUIREMENTS.md
docs/: ARCHITECTURE.md  CHATGPT-GROWTH-RESEARCH.md  CLAUDE.md  COMPETITIVE-ANALYSIS.md  CONTRIBUTING.md  COST-ANALYSIS.md  GETTING_STARTED.md  GROWTH-STRATEGY.md  INTEGRATIONS.md  ROADMAP.md  SECURITY-GUARDRAILS-RESEARCH.md  SETUP.md  USER_GUIDE.md  scribario-architecture.excalidraw  scribario-autopilot.excalidraw  scribario-commands.excalidraw
pipeline/: CLAUDE.md  brand_gen.py  brand_voice.py  caption_gen.py  cost_utils.py  engagement.py  image_gen.py  orchestrator.py  posting.py  schedule_parser.py  scraper.py  social_scraper.py  topic_engine.py  video_gen.py  video_prompt_gen.py
scripts/: connect_server.py  fix_mirror_shots.py  fix_rear_angles.py  gen_scribario_promo.py  generate_epic_banners.py  generate_fb_banners.py  generate_fb_banners_v2.py  generate_fb_banners_v3.py  generate_hand_phone_v2.py  generate_hand_phone_v3.py  generate_hero_future.py  generate_hero_v3.py  generate_promo_video.py  generate_reference_angles.py  generate_reference_angles_v2.py  generate_straight_phone.py  generate_website_assets.py  meta_data_deletion.py  refresh_postiz_token.sh  seed_blog_posts.mjs  setup_stripe.py  stitch_hero_cta.py  test_kling_chariot.py  test_kling_space.py  (+5 more)
(+381 files in other folders)
