[project]
name = "scribario"
version = "0.1.0"
description = "AI-powered social media content creation and auto-posting via Telegram"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13,<4",
    "aiogram-dialog>=2.2,<3",
    "supabase>=2.0,<3",
    "anthropic>=0.40,<1",
    "httpx>=0.27,<1",
    "pillow>=10.0,<11",
    "python-dotenv>=1.0,<2",
    "structlog>=24.0,<25",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5.0,<6",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
